# GraphOpening

./: CMakeLists.txt  CreateDemoGraph.cxx  Demo.cxx  Example.cxx  GraphOpening.cxx  GraphOpening.h  GraphOpeningNaive.cxx  GraphOpeningNaive.h  GraphOpeningNaiveExample.cxx  GraphOpeningNullRemovalDifferenceExample.cxx  GraphOpeningTracking.cxx  GraphOpeningTracking.h  GraphOpeningTrackingExample.cxx  Helpers.cxx  Helpers.h  Types.h  graph.dot
Article/: GraphOpening.out  GraphOpening.tex
VTKJournal/: GraphOpening.tex  GraphOpening.tex.backup
data/rectangle/: OutlineGraph.vtp  rough.vtp
data/rectangleSolid/: rectangleSolidBoundary.vtp
